Cracion de los paquetes y clases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 #http://localhost:8080/h2-console
+
+#CREATE TABLE CLIENTE (
+#id INT AUTO_INCREMENT  PRIMARY KEY,
+#edad INT NOT NULL,
+#nombre VARCHAR(250) NOT NULL,
+#apellido VARCHAR(250) NOT NULL,
+#fecha_nacimiento DATE  NOT NULL
+#);
