--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 server.servlet.context-path=/WSRestClientes
+server.port=8081
 #http://localhost:8080/WSRestClientes/h2-console
 
 #CREATE TABLE CLIENTE (
